--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -206,7 +206,22 @@ button{
   margin: 0.5rem 0rem;
   padding: 0.5rem;
   box-shadow: 6px 6px 20px rgba(122,122, 122, 0.25);
+  cursor: pointer;
 }
+
+#correct{
+  padding: 0.7rem;
+  border: 5px solid #9ecaed;
+  box-shadow: 0 0 10px #9ecaed;
+}
+
+#incorrect{
+  padding: 0.7rem;
+  border: 5px solid #ed9e9e;
+  box-shadow: 0 0 10px #ed9e9e;
+}
+
+
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
