updated mobile css

--- a/src/styles/AnswerScreen.css
+++ b/src/styles/AnswerScreen.css
@@ -54,3 +54,39 @@
     border: 5px solid #ed9e9e;
     box-shadow: 0 0 10px #ed9e9e;
 }
+.answer-card-image{
+    width: 90px;
+}
+@media screen and (max-width:1240px) {
+    .answer-screen{
+        width: 99%;
+    }
+
+    .song-title{
+        font-weight: 600;
+        font-size: .8rem;
+        padding: 0px;
+        margin: 0px;
+    }  
+
+    .answer-card-conatiner{
+        display: flex;
+        flex-direction: row;
+        /* justify-content: space-evenly; */
+        background: linear-gradient(to left top, rgba(255,255,255,0.7), rgba(255,255,255,0.5));
+        border-radius: 1rem;
+        margin: 0.15rem 0rem;
+        padding: 0.5rem;
+        box-shadow: 6px 6px 20px rgba(122,122, 122, 0.25);
+        cursor: pointer;
+        width: 100%;
+    }
+
+    .answer-card-image{
+        width: 70px;
+    }
+
+    .song-info{
+        height: 4em;
+    }
+}
