--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,6 @@
     align-items: center;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
-  
   }
   
   h3{
@@ -30,7 +29,6 @@
     z-index: 3;
     backdrop-filter: blur(2rem);
     display: flex;
-  
   }
   
   .circle1,
@@ -54,6 +52,7 @@
   }
   
   .settings-container{
+    width: 10%;
     padding: 10px;
   }
   
@@ -92,10 +91,10 @@
   /* GAME CONTAINER */
   
   .game-container{
-    margin: 1.2rem;
+    padding: 1.2rem;
     display: flex;
     flex-direction: column;
-    flex:5;
+    width: 100%;
   }
   
   .status-container{
@@ -190,9 +189,6 @@
   
   }
   
-  
-  
-  
   .answer-card{
     display: flex;
     background: linear-gradient(to left top, rgba(255,255,255,0.7), rgba(255,255,255,0.5));
@@ -217,24 +213,42 @@
     display:flex;
     align-self: end;
     margin: 10px;
-    /* border: 2px red solid; */
-    /* justify-content: center; */
-    /* float: right; */
-    /* width: 10rem; */
-  
   }
-  /* @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
+
+  @media screen and (max-width:1240px) {
+    .glass-container {
+      background: white;
+      min-height: 80vh;
+      width: 90%;
+      background: linear-gradient(to right bottom, rgba(255,255,255,0.7), rgba(255,255,255,0.3));
+      border-radius: 2rem;
+      z-index: 3;
+      backdrop-filter: blur(2rem);
+      display: flex;
     }
-  } */
-  
-  /* @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
+    .game-container{
+      flex:4;
     }
-    to {
-      transform: rotate(360deg);
+    .btn-small{
+      display:flex;
+      font-size: 0.65rem;
+      font-weight: 500;
+      padding: 1rem;
+      margin: 10px;
+      align-self: center;
     }
-  } */
-  
+    .btn{
+
+      font-weight: 500;
+      padding: 1.25rem;
+
+    }
+
+    .btn-larger{
+
+      font-size: 1.75rem;
+      font-weight: 500;
+      padding: 1.5rem;
+
+    }
+  }
