--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -79,6 +79,20 @@
     cursor: pointer;
 }
 
+.setting-option-disabled{
+    display: flex;
+    border-radius: 1rem;
+    margin: 0.5rem 0rem;
+    padding: 1.5rem;
+    pointer-events: none;
+    cursor: not-allowed;
+    background: linear-gradient(to left top, rgba(240, 240, 240, 0.7), rgba(240, 240, 240, 0.5));
+    box-shadow: 6px 6px 20px rgba(122,122, 122, 0.1);
+
+}
+.setting-option-disabled:hover{
+    cursor: not-allowed;
+}
 #select {
     display: flex;
     background: linear-gradient(to left top, rgba(255,255,255,0.7), rgba(255,255,255,0.5));
