--- a/src/styles/AnswerScreen.css
+++ b/src/styles/AnswerScreen.css
@@ -42,11 +42,14 @@
     font-size: 1rem;
     padding: 0px;
     margin: 0px;
+    color: #16181B;
 }  
 
 .song-artist{
     padding: 0px;
     margin: 0px;
+    color: #A0730C;
+    font-weight: 600;
 }
 
 #correct{
