--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -1,13 +1,21 @@
 .hero-section{
     position: absolute;
-    right: 0;
+    right: 0px;
+    top: 0;
+    /* left: 150px; */
     bottom: 0;
     margin: 0px;
     padding: 0px;
     width: 100%;
     height: 100%;
     z-index: 0;
-    object-fit: contain;
-    overflow:hidden;
+    object-fit: cover;
+    overflow: hidden;
+    transform: rotateY(180deg);
 
+}
+@media screen and (max-width:1240px) {
+    .hero-section{
+        display: none;
+    }
 }
