--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -66,7 +66,7 @@
     gap: 20px;
     font-weight: 700;
     font-size: 1.35em;
-    color: #4277bd;
+    color: #16181B;
 }
 
 .setting-option{
@@ -105,9 +105,10 @@
     box-shadow: 0 0 10px #9ecaed;
 }
 
-@media screen and (max-width:1240px) {
+@media screen and (max-width:800px) {
     .settings-list {
-        flex: 1;
+        /* flex: 1; */
+        min-width: 5%;
     }
 
     .settings-list.active {
@@ -125,6 +126,12 @@
         align-items: center;
         flex-wrap: wrap;
     }
+
+    .setting-title.top p {
+        padding: 0px;
+        margin: 0px;
+    }
+
     .setting-title{
         display: flex;
         padding: 0px;
@@ -147,9 +154,14 @@
         background: linear-gradient(to left top, rgba(255,255,255,0.7), rgba(255,255,255,0.5));
         border-radius: 1rem;
         margin: 0.5rem 0rem;
-        padding: 0.75rem;
+        padding: 1rem;
         box-shadow: 6px 6px 20px rgba(122,122, 122, 0.25);
         cursor: pointer;
+    }
+    .setting-option-disabled{
+
+        padding: 1rem;
+
     }
 
     #select {
@@ -157,7 +169,7 @@
         background: linear-gradient(to left top, rgba(255,255,255,0.7), rgba(255,255,255,0.5));
         border-radius: 1rem;
         margin: 0.5rem 0rem;
-        padding: 0.75rem;
+        padding: 0.5rem;
         box-shadow: 6px 6px 20px rgba(122,122, 122, 0.25);
         cursor: pointer;
         border: 5px solid #9ecaed;
@@ -166,6 +178,69 @@
     
 }
 
+@media screen and (max-width:300px) {
+    .settings-list {
+        min-width: 5%;
+
+    }
+
+    .settings-list.active {
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right bottom, rgba(255,255,255,0.95), rgba(255,255,255,0.7));
+    }
+
+    .setting-title.top{
+        padding: 0px;
+        margin: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .setting-title{
+        display: flex;
+        padding: 0px;
+        margin: 0px;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+
+    .setting-list-row-container{
+        display: flex;
+        padding: 0px;
+        margin: 0px;
+        gap: 5px;
+    }
+
+    .setting-option{
+        padding: 0.3rem;
+    }
+
+    #select {
+        padding: 0.3rem;
+    }
+
+    .setting-option-disabled{
+        display: flex;
+        border-radius: 1rem;
+        margin: 0.5rem 0rem;
+        padding: 3px;
+        pointer-events: none;
+        cursor: not-allowed;
+        background: linear-gradient(to left top, rgba(240, 240, 240, 0.7), rgba(240, 240, 240, 0.5));
+        box-shadow: 6px 6px 20px rgba(122,122, 122, 0.1);
+    
+    }
+    .setting-option-disabled:hover{
+        cursor: not-allowed;
+    }
+    
+}
 .test-icon{
     padding: 10px;
 }
