--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -136,6 +136,7 @@
     padding: 2rem;
     border: none;
     box-shadow: 6px 6px 20px rgba(122,122, 122, 0.25);
+    cursor: pointer;
   }
   .btn-larger{
     background: linear-gradient(to right bottom, #ff930f, #ffcb5b);
@@ -147,6 +148,7 @@
     padding: 3rem;
     border: none;
     box-shadow: 6px 6px 20px rgba(122,122, 122, 0.25);
+    cursor: pointer;
   }
   .btn-small{
     background: linear-gradient(to right bottom, #ff930f, #ffcb5b);
@@ -249,6 +251,8 @@
     display:flex;
     align-self: end;
     margin: 10px;
+    cursor: pointer;
+
   }
   
   .score-output{
@@ -277,12 +281,13 @@
       padding: 1rem;
       margin: 10px;
       align-self: center;
+      cursor: pointer;
     }
     .btn{
 
       font-weight: 500;
       padding: 1.25rem;
-
+      cursor: pointer;
     }
 
     .btn-larger{
@@ -290,6 +295,7 @@
       font-size: 1.75rem;
       font-weight: 500;
       padding: 1.5rem;
+      cursor: pointer;
 
     }
     .instructions-screen{
@@ -312,4 +318,8 @@
       font-size:.8rem;
       margin: 5px;
     }
+  }
+
+  .btn-active{
+    cursor: pointer;
   }
